# SimuTrader

./: .env.example  .gitignore  Makefile  README.md  data  docker-compose.yml  second_run.json  test_presets.js
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_schema.py  0002_add_run_daily_equity_currency_columns.py  0003_backtest_run_structured_failure_fields.py  0004_backtest_request_idempotency.py  0005_run_exec_actor_meta.py  0006_actor_scoped_idemp.py  0007_run_query_perf_indexes.py  0008_strategy_actor_scope.py
apps/api/app/: __init__.py  main.py  settings.py  worker.py
apps/api/app/api/: router.py
apps/api/app/backtest/: __init__.py  buy_and_hold.py  dca.py  engine.py  errors.py  executor.py  fixed_weight_rebalance.py  mean_reversion.py  momentum.py
apps/api/app/data/: __init__.py  calendar.py  duckdb.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  assets.py  backtests.py  calendar.py  strategies.py
apps/api/app/playground/: presets.py  service.py
apps/api/app/schemas/: __init__.py  assets.py  backtests.py  market.py  strategies.py
apps/api/app/scripts/: __init__.py  e2e_smoke_runner.py
apps/api/app/security/: __init__.py  actor.py
apps/api/app/services/: calendar_policy.py  (+2 more)
apps/api/tests/: conftest.py  test_actor_security.py  test_assets_routes.py  test_backtest_integration.py  test_backtests_routes_m3.py  test_calendar.py  test_config_validation.py  test_market_routes.py  test_runs_routes.py  test_settings.py  test_tax_fifo_engine.py
(+72 files in other folders)
