[project]
name = "simutrader-api"
version = "0.1.0"
description = "SimuTrader FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "celery>=5.3",
    "duckdb>=1.0",
    "fastapi>=0.110",
    "jsonschema>=4.21",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.24",
]

[tool.ruff]
line-length = 100
